feat(0) add api crud product and update entity